--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@rollup/plugin-replace": "^2.3.3",
     "concurrently": "^5.3.0",
+    "drivelist": "^9.1.0",
     "electron-reload": "^1.5.0",
     "electron-squirrel-startup": "^1.0.0",
     "sirv-cli": "^1.0.0",
