--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-
+.idea
+*.map
+/src/*.js
+drivelist.json
+/src/drivelist.json
+userconfig.json
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
