--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "svelte",
   "version": "1.0.0",
   "description": "My Electron application description",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "concurrently \"npm:svelte-dev\" \"electron-forge start\"",
     "package": "electron-forge package",
@@ -49,12 +49,12 @@
   },
   "dependencies": {
     "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-typescript": "^8.0.0",
     "concurrently": "^5.3.0",
     "drivelist": "^9.1.0",
     "electron-reload": "^1.5.0",
     "electron-squirrel-startup": "^1.0.0",
-    "sirv-cli": "^1.0.0",
-    "svelte-preprocess": "^4.3.2"
+    "sirv-cli": "^1.0.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.52",
@@ -65,6 +65,8 @@
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@tsconfig/svelte": "^1.0.10",
+    "@types/node": "^14.14.10",
     "autoprefixer": "^10.0.1",
     "electron": "9.2.0",
     "node-sass": "^4.14.1",
@@ -75,6 +77,9 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^6.0.0",
     "svelte": "^3.0.0",
-    "svelte-preprocess-sass": "^0.2.0"
+    "svelte-check": "^1.1.17",
+    "svelte-preprocess": "^4.6.1",
+    "svelte-preprocess-sass": "^0.2.0",
+    "typescript": "^4.1.2"
   }
 }
